--- a/src/app/equipment/equipment.component.html
+++ b/src/app/equipment/equipment.component.html
@@ -1,7 +1,17 @@
 <h3>Equipment</h3>
 <ul>
-  <li>Habitat dome</li>
-  <li>Drones</li>
-  <li>Food containers</li>
-  <li>Oxygen tanks</li>
+  <li *ngFor="let tool of equipment">
+    <span *ngIf="equipmentPieceBeingEdited !== tool; else elseBlock">
+      <!-- display state of equipment -->
+      <span (click)="edit(tool)" class="editable-text">{{tool}}</span>
+      <button (click)="remove(tool)">remove</button>
+    </span>
+    <ng-template #elseBlock>
+      <!-- edit state of member -->
+      <input #updatedTool (keyup.enter)="save(updatedTool.value, tool)" value="{{tool}}"/>
+      <button (click)="save(updatedTool.value, tool)">save</button>
+    </ng-template>
+  </li>
 </ul>
+<input #toolName type="text"/>
+<button (click)="add(toolName.value)">Add</button>
